force-app/main/default/objects/Job_Application__c/fields/Adapta_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Adapta_Email_Address__c</fullName>
    <label>Adapta&apos;s Email Address</label>
    <type>Email</type>
</CustomField>