force-app/main/default/objects/Job_Application__c/fields/Are_you_an_Adapta_s_Employee__c.field-meta.xml
<CustomField>
    <fullName>Are_you_an_Adapta_s_Employee__c</fullName>
    <label>Are you an Adapta&apos;s Employee?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>