force-app/main/default/objects/Job_Application__c/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <type>Url</type>
</CustomField>