force-app/main/default/objects/Job_Application__c/fields/DUI__c.field-meta.xml
<CustomField>
    <fullName>DUI__c</fullName>
    <label>DUI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>