force-app/main/default/objects/Job_Application__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>