force-app/main/default/objects/Job_Application__c/fields/Hiring_Comments__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Comments__c</fullName>
    <label>Hiring Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>