force-app/main/default/objects/Job_Application__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Computrabajo</fullName>
            </value>
            <value>
                <fullName>Un Mejor Empleo</fullName>
            </value>
            <value>
                <fullName>BuscoJobs</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Universidad Don Bosco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>