force-app/main/default/objects/Job_Application__c/fields/Not_Interested_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Not_Interested_Reasons__c</fullName>
    <label>Not Interested Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>