force-app/main/default/objects/Job_Application__c/fields/Not_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Reason__c</fullName>
    <label>Not Qualified Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>