force-app/main/default/objects/Job_Application__c/fields/Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Phone_number__c</fullName>
    <label>Phone number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>