force-app/main/default/objects/Job_Application__c/fields/Qualification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Comments__c</fullName>
    <label>Qualification Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>