force-app/main/default/objects/Job_Application__c/fields/Referrer_Email__c.field-meta.xml
<CustomField>
    <fullName>Referrer_Email__c</fullName>
    <label>Referrer&apos;s Email</label>
    <type>Email</type>
</CustomField>