force-app/main/default/objects/Job_Application__c/fields/Referrer_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Referrer_s_Name__c</fullName>
    <label>Referrer&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>