force-app/main/default/objects/Job_Application__c/fields/Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reasons__c</fullName>
    <label>Rejection Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>