force-app/main/default/objects/Job_Application__c/fields/Web_Applicant_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Applicant_Name__c</fullName>
    <label>(Web)Applicant&apos;s Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>