force-app/main/default/objects/Job_Application__c/fields/Web_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Web_Attachment__c</fullName>
    <label>(Web)Attachment</label>
    <type>Url</type>
</CustomField>