force-app/main/default/objects/Job_Application__c/fields/Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Web_Email__c</fullName>
    <label>(Web)Email</label>
    <type>Email</type>
</CustomField>