force-app/main/default/objects/Job_Application__c/fields/Web_Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Web_Lead_Source__c</fullName>
    <label>(Web)Lead Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>