force-app/main/default/objects/Job_Application__c/fields/Web_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Web_Phone_Number__c</fullName>
    <label>(Web)Phone Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>