force-app/main/default/objects/Job_Application__c/fields/Web_Position__c.field-meta.xml
<CustomField>
    <fullName>Web_Position__c</fullName>
    <label>(Web)Position</label>
    <length>50</length>
    <type>Text</type>
</CustomField>