force-app/main/default/objects/Job_Application__c/fields/Web_Position_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Web_Position_External_ID__c</fullName>
    <label>(Web)Position External ID</label>
    <length>4</length>
    <type>Text</type>
</CustomField>