force-app/main/default/objects/Job_Application__c/fields/Would_you_like_to_be_mentioned__c.field-meta.xml
<CustomField>
    <fullName>Would_you_like_to_be_mentioned__c</fullName>
    <label>Would you like to be mentioned?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>