force-app/main/default/objects/Job_Application__c/recordTypes/Not_Referred.recordType-meta.xml
<RecordType>
    <fullName>Not_Referred</fullName>
    <active>true</active>
    <label>Not Referred</label>
</RecordType>