force-app/main/default/objects/Job_Application__c/recordTypes/Referred.recordType-meta.xml
<RecordType>
    <fullName>Referred</fullName>
    <active>true</active>
    <label>Referred</label>
</RecordType>