force-app/main/default/objects/Job_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Job_Position__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Email_Address__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Candidate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>