force-app/main/default/objects/Job_Application__c/listViews/Recruitment_Applications_Queue_Job_Application.listView-meta.xml
<ListView>
    <fullName>Recruitment_Applications_Queue_Job_Application</fullName>
    <filterScope>Queue</filterScope>
    <label>Recruitment Applications Queue</label>
    <queue>Recruitment_Applications_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>