force-app/main/default/objects/Job_Application__c/listViews/Unassigned_Positions.listView-meta.xml
<ListView>
    <fullName>Unassigned_Positions</fullName>
    <columns>NAME</columns>
    <columns>Job_Position__c</columns>
    <columns>Web_Position_External_ID__c</columns>
    <columns>Web_Position__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Job_Position__c</field>
        <operation>equals</operation>
    </filters>
    <label>Unassigned Positions</label>
</ListView>